syntax = "proto3";

enum ContainerAction {
    UP = 1;
    DOWN = 2;
    RECREATE = 3;
    STATUS = 4;
}

message ContainerManagerRequest {
    string containerId = 1;
    ContainerAction action = 2;
}

message ContainerManagerResponse {
    string containerId = 1;
    string result = 2;
}

service ContainerManager {
    rpc ManageContainer (ContainerManagerRequest) returns (ContainerManagerResponse);
}